<resources>
    <string name="app_name">Inbox.Me</string>
    <string name="logIn">LOG IN</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="register">REGISTER</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="firstName">First Name</string>
    <string name="secondName">Second Name</string>
    <string name="confirmEmail">Confirm Email</string>
    <string name="conformPassword">Conform Password</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="email">Email</string>
    <string name="registertittle">Register:</string>
    <string name="More">More</string>
    <string name="notification">Notification</string>
    <string name="map">Map</string>
    <string name="feed">Feed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Chat">Chat</string>
    <string name="log_in">Log In</string>
    <string name="Register">Register</string>
    <string name="back">Back</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_more">More</string>
    <string name="title_chat">Chat</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_post">New Post</string>
    <string name="what_are_you_up_to">What are you up to?</string>
    <string name="title_of_the_post">Title of the post!</string>
    <string name="content_of_the_post">Content of the post!</string>
    <string name="title_activity_maps">Map</string>
    <string name="friends">Friends</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
</resources>
