<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/feedBB"
        android:icon="@drawable/ic_feed"
        android:title="@string/feed"
        android:enabled="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/friendsBB"
        android:icon="@drawable/ic_profile"
        android:title="@string/friends"
        android:enabled="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profileBB"
        android:icon="@drawable/ic_data_usage_black_24dp"
        android:title="@string/profile"
        android:enabled="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/moreBB"
        android:icon="@drawable/ic_feed2"
        android:title="@string/More"
        android:enabled="true"
        app:showAsAction="ifRoom" />
</menu>