<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_initial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.apps.vithursan.inboxme.InitialActivity">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="65sp"
        android:textColor="#fff"
        android:id="@+id/appName"
        android:layout_marginTop="47dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/appLogo"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/appName"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logos" />

    <Button
        android:text="@string/logIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogIn"
        android:onClick="onbtnLogInClick"
        android:textColor="@color/colorPrimary"
        android:background="@android:color/white"
        android:layout_above="@+id/btnRegister"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <Button
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegister"
        android:onClick="onbtnRegisterClick"
        android:textColor="@android:color/white"
        android:background="@color/colorDark"
        android:textStyle="bold"
        android:layout_above="@+id/TnC"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:text="@string/terms_and_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TnC"
        android:onClick="ontxtTermsClick"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:layout_marginBottom="10dp" />
</RelativeLayout>
