<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.apps.vithursan.inboxme.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginToolbar"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Register"
                android:textSize="18sp"
                android:id="@+id/toolbarTitle"
                android:textColor="@color/colorWhite"/>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <TextView
        android:text="@string/logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="65sp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/loginTitle"
        android:layout_above="@+id/appLogo"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/appLogo"
        android:layout_marginTop="19dp"
        android:layout_above="@+id/tfEmail"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo_great" />

    <EditText
        android:hint="Email"
        android:background="@drawable/box_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_above="@+id/tfPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:id="@+id/tfEmail"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="12dp"/>

    <EditText
        android:hint="@string/password"
        android:id="@+id/tfPassword"
        android:background="@drawable/box_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginBottom="15dp"
        android:padding="12dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_above="@+id/btnLogIn"/>

    <Button
        android:text="@string/logIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogIn"
        android:onClick="onbtnLogInClick"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textStyle="bold"/>
</RelativeLayout>
